{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 25,
  "lineage": "92b66c44-721b-15c9-d722-0bec2d14c26a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ssmk_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005f83f719d2cefd7",
            "domain": "vpc",
            "id": "eipalloc-005f83f719d2cefd7",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-170-240-130.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.170.240.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ssmk_nat_eip"
            },
            "tags_all": {
              "Name": "ssmk_nat_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_Host_ssmk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0e4d1e7c0627784e4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4d1e7c0627784e4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssmk_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09a838227c4e923a8",
            "private_dns": "ip-10-0-0-44.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.44",
            "public_ip": "18.130.23.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-075cdebe393a05095",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010c71a03074dc2f3",
            "tags": {
              "Name": "Bastion_Host_ssmk"
            },
            "tags_all": {
              "Name": "Bastion_Host_ssmk"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0911f23436bc52428"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "aws_key_pair.ssmk_pubkey",
            "aws_security_group.ssmk_sg_bastion",
            "aws_subnet.ssmk_pub_sn1",
            "aws_vpc.ssmk_vpc",
            "tls_private_key.ssmk_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Master01_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-096d7ec6f0f8cc3de",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-096d7ec6f0f8cc3de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssmk_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06d0fba2385d44251",
            "private_dns": "ip-10-0-2-29.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ef4f6dbebbacd04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018d8ebba44e1eec2",
            "tags": {
              "Name": "Master01_node"
            },
            "tags_all": {
              "Name": "Master01_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06239677972c90bf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssmk_pubkey",
            "aws_security_group.ssmk_sg_master_node",
            "aws_subnet.ssmk_prv_sn1",
            "aws_vpc.ssmk_vpc",
            "tls_private_key.ssmk_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Master02_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0f8fc9f26250aab33",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f8fc9f26250aab33",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssmk_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ecb277556590c65b",
            "private_dns": "ip-10-0-3-114.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08df6356fbe636975",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e10e0aba83b3fde",
            "tags": {
              "Name": "Master02_node"
            },
            "tags_all": {
              "Name": "Master02_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06239677972c90bf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssmk_pubkey",
            "aws_security_group.ssmk_sg_master_node",
            "aws_subnet.ssmk_prv_sn2",
            "aws_vpc.ssmk_vpc",
            "tls_private_key.ssmk_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Master03_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0ef357e48d0395e58",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef357e48d0395e58",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssmk_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c124ee24cb02a16c",
            "private_dns": "ip-10-0-4-108.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd9090ef50fa3f3b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06cbf7caed3520760",
            "tags": {
              "Name": "Master03_node"
            },
            "tags_all": {
              "Name": "Master03_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06239677972c90bf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssmk_pubkey",
            "aws_security_group.ssmk_sg_master_node",
            "aws_subnet.ssmk_prv_sn3",
            "aws_vpc.ssmk_vpc",
            "tls_private_key.ssmk_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Worker01_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0792babcd0c67b490",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0792babcd0c67b490",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssmk_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e23dcda43fb9d47",
            "private_dns": "ip-10-0-2-149.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0105e3220e34b774c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018d8ebba44e1eec2",
            "tags": {
              "Name": "Worker01_node"
            },
            "tags_all": {
              "Name": "Worker01_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06239677972c90bf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssmk_pubkey",
            "aws_security_group.ssmk_sg_master_node",
            "aws_subnet.ssmk_prv_sn1",
            "aws_vpc.ssmk_vpc",
            "tls_private_key.ssmk_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Worker02_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0e213100356a5ec7f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e213100356a5ec7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssmk_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091de2eb3a6fe09e0",
            "private_dns": "ip-10-0-3-55.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f1b1a569bfe3d85b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06e10e0aba83b3fde",
            "tags": {
              "Name": "Worker02_node"
            },
            "tags_all": {
              "Name": "Worker02_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06239677972c90bf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssmk_pubkey",
            "aws_security_group.ssmk_sg_master_node",
            "aws_subnet.ssmk_prv_sn2",
            "aws_vpc.ssmk_vpc",
            "tls_private_key.ssmk_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f540e9f488cfa27d",
            "arn": "arn:aws:ec2:eu-west-2:803077056902:instance/i-0d95b5c476669d4ba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d95b5c476669d4ba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "ssmk_pub_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f13985e4ccba390",
            "private_dns": "ip-10-0-0-197.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.197",
            "public_ip": "18.134.229.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ea8d35492804c42d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-010c71a03074dc2f3",
            "tags": {
              "Name": "loadbalancer_node"
            },
            "tags_all": {
              "Name": "loadbalancer_node"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06239677972c90bf6"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssmk_pubkey",
            "aws_security_group.ssmk_sg_master_node",
            "aws_subnet.ssmk_pub_sn1",
            "aws_vpc.ssmk_vpc",
            "tls_private_key.ssmk_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ssmk_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:internet-gateway/igw-0f1ee73b1e2aa044c",
            "id": "igw-0f1ee73b1e2aa044c",
            "owner_id": "803077056902",
            "tags": {
              "Name": "ssmk_igw"
            },
            "tags_all": {
              "Name": "ssmk_igw"
            },
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ssmk_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005f83f719d2cefd7",
            "connectivity_type": "public",
            "id": "nat-05df23a5e0c526af3",
            "network_interface_id": "eni-03e243a5a40c770be",
            "private_ip": "10.0.0.149",
            "public_ip": "18.170.240.130",
            "subnet_id": "subnet-010c71a03074dc2f3",
            "tags": {
              "Name": "ssmk_ngw"
            },
            "tags_all": {
              "Name": "ssmk_ngw"
            }
          },
          "dependencies": [
            "aws_eip.ssmk_nat_eip",
            "aws_internet_gateway.ssmk_igw",
            "aws_subnet.ssmk_pub_sn1",
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ssmk_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:route-table/rtb-08986d17c50ebb657",
            "id": "rtb-08986d17c50ebb657",
            "owner_id": "803077056902",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1ee73b1e2aa044c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ssmk_igw",
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ssmk_rt_ass_pub_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a4965c916641baa",
            "route_table_id": "rtb-08986d17c50ebb657",
            "subnet_id": "subnet-010c71a03074dc2f3"
          },
          "dependencies": [
            "aws_internet_gateway.ssmk_igw",
            "aws_route_table.ssmk_rt",
            "aws_subnet.ssmk_pub_sn1",
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ssmk_rt_ass_pub_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066902b3262dd8c0a",
            "route_table_id": "rtb-08986d17c50ebb657",
            "subnet_id": "subnet-0c14f65fb1dbf3140"
          },
          "dependencies": [
            "aws_internet_gateway.ssmk_igw",
            "aws_route_table.ssmk_rt",
            "aws_subnet.ssmk_pub_sn2",
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssmk_sg_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-0911f23436bc52428",
            "description": "Allow traffic for ssh",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0911f23436bc52428",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ssmk_sg_bastion",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssmk_sg_bastion"
            },
            "tags_all": {
              "Name": "ssmk_sg_bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssmk_sg_master_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:security-group/sg-06239677972c90bf6",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06239677972c90bf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ssmk_sg_master_node",
            "name_prefix": "",
            "owner_id": "803077056902",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssmk_sg_master_node"
            },
            "tags_all": {
              "Name": "ssmk_sg_master_node"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ssmk_prv_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-018d8ebba44e1eec2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018d8ebba44e1eec2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssmk_prv_sn1"
            },
            "tags_all": {
              "Name": "ssmk_prv_sn1"
            },
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ssmk_prv_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-06e10e0aba83b3fde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e10e0aba83b3fde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssmk_prv_sn2"
            },
            "tags_all": {
              "Name": "ssmk_prv_sn2"
            },
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ssmk_prv_sn3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-06cbf7caed3520760",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cbf7caed3520760",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssmk_prv_sn3"
            },
            "tags_all": {
              "Name": "ssmk_prv_sn3"
            },
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ssmk_pub_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-010c71a03074dc2f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c71a03074dc2f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssmk_pub_sn1"
            },
            "tags_all": {
              "Name": "ssmk_pub_sn1"
            },
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ssmk_pub_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:subnet/subnet-0c14f65fb1dbf3140",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c14f65fb1dbf3140",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "803077056902",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ssmk_pub_sn2"
            },
            "tags_all": {
              "Name": "ssmk_pub_sn2"
            },
            "vpc_id": "vpc-08d7484705ba689e2"
          },
          "dependencies": [
            "aws_vpc.ssmk_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ssmk_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:803077056902:vpc/vpc-08d7484705ba689e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-064b4fa7204c1b8b6",
            "default_route_table_id": "rtb-0a5db3ad5b5fbd57b",
            "default_security_group_id": "sg-0374ebdaf53fc7c5d",
            "dhcp_options_id": "dopt-0eceeeb0168d700fc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d7484705ba689e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5db3ad5b5fbd57b",
            "owner_id": "803077056902",
            "tags": {
              "Name": "ssmk_vpc"
            },
            "tags_all": {
              "Name": "ssmk_vpc"
            }
          }
        }
      ]
    }
  ]
}